--- a/css/magnificPupopForm.css
+++ b/css/magnificPupopForm.css
@@ -144,7 +144,6 @@ body {
 .linkFormPupop ul {
 	margin: 0;
 	padding: 0 0 0 20px;
-	/* padding: 0; */
 	position: relative;
 }
 
@@ -153,12 +152,18 @@ body {
 	left: 7px;
 	top: -13px;
 	color: grey;
+	color: #fff;
+	font-size: 20px;
 	cursor: pointer;
 	z-index: 100;
+	-webkit-transition: 0.4s;
+	-moz-transition: 0.4s;
+	transition: 0.4s;
 }
 
 .linkFormPupop ul>div.linkFormPupop_close:hover {
-	color: red;
+	/* color: red; */
+	transform: scale(2, 2)
 }
 
 .linkFormPupop li {
@@ -186,6 +191,7 @@ body {
 	right: 0;
 	background-color: rgb(24, 179, 63);
 }
+/* style first window */
 
 .white-popup {
 	position: relative;
@@ -215,13 +221,56 @@ body {
 	border: 20px solid transparent;
 	border-left: 20px solid rgb(134, 188, 48);
 }
-
 .formPupop-wraper {
 	height: 100%;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-around;
 }
+/* style radio */
+.radio {
+	margin: 0.5rem;
+  }
+  .radio input[type="radio"] {
+	position: absolute;
+	opacity: 0;
+  }
+  .radio input[type="radio"] + .radio-label:before {
+	content: '';
+	background: #f4f4f4;
+	border-radius: 100%;
+	border: 1px solid #b4b4b4;
+	display: inline-block;
+	width: 1.4em;
+	height: 1.4em;
+	position: relative;
+	top: -0.2em;
+	margin-right: 1em;
+	vertical-align: top;
+	cursor: pointer;
+	text-align: center;
+	transition: all 250ms ease;
+  }
+  .radio input[type="radio"]:checked + .radio-label:before {
+	background-color: rgb(134, 188, 48);
+	box-shadow: inset 0 0 0 4px #f4f4f4;
+  }
+  .radio input[type="radio"]:focus + .radio-label:before {
+	outline: none;
+	border-color: rgb(134, 188, 48);
+  }
+  .radio input[type="radio"]:disabled + .radio-label:before {
+	box-shadow: inset 0 0 0 4px #f4f4f4;
+	border-color: #b4b4b4;
+	background: #b4b4b4;
+  }
+  .radio input[type="radio"] + .radio-label:empty:before {
+	margin-right: 0;
+  }
+  
+
+/* end style radio */
+
 
 .formPopup-label {
 	cursor: pointer;
@@ -275,6 +324,7 @@ body {
 	-moz-transition: 0.3s;
 	transition: 0.3s;
 	font-size: 16px;
+	cursor: pointer;
 }
 
 .formPopup-link button:hover {
@@ -282,17 +332,13 @@ body {
 	border: 1px solid rgb(134, 188, 48);
 	opacity: 0.8;
 	border-radius: 3px;
-	/* padding-left: 16px;
-	padding-right: 16px; */
-
 }
 .formPopup-link button:disabled {
 	background-color: rgb(24, 179, 63);
 	border: 1px solid rgb(24, 179, 63);
 	opacity: 0.8;
-	/* padding-left: 16px;
-	padding-right: 16px; */
 	color: #666;
+	/* cursor: pointer; */
 
 }
 
@@ -317,6 +363,7 @@ body {
 	-webkit-transition: 0.3s;
 	-moz-transition: 0.3s;
 	transition: 0.3s;
+	cursor: pointer;
 }
 
 .formPopup-button button:hover {
